# double

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs
examples/: function.rs  macro.rs  macro_new_style_import.rs  pattern_matching.rs  readme.rs  return_value.rs  send.rs  simple.rs  unclonable.rs
src/: decay.rs  lib.rs  macros.rs  matcher.rs  mock.rs  thread_safe.rs
